src/objects/NDA_Specialist_Selection_Criteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NDA Specialist Selection Criteria</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit</description>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Supplier__c</fullName>
        <description>Customer/Supplier</description>
        <label>Customer/Supplier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Specialist_Id__c</fullName>
        <description>NDA Specialist Id</description>
        <label>NDA Specialist Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>NDA Specialist Selection Criteria</label>
</CustomObject>